--- a/config/database.yml
+++ b/config/database.yml
@@ -1,55 +1,34 @@
-# MySQL. Versions 5.5.8 and up are supported.
-#
-# Install the MySQL driver
-#   gem install mysql2
-#
-# Ensure the MySQL gem is defined in your Gemfile
-#   gem "mysql2"
-#
-# And be sure to use new-style password hashing:
-#   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
-#
+# 元々あるものからアダプタとかを変更。
+# デフォルト
 default: &default
-  adapter: mysql2
-  encoding: utf8mb4
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  socket: /tmp/mysql.sock
 
+# アプリ開発
 development:
   <<: *default
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
   database: ajax_app_rails7_development
+  # ↑アプリ名などによって、ここは変わるから気をつけて！
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+# テスト環境
 test:
   <<: *default
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
   database: ajax_app_rails7_test
+  # ↑アプリ名などによって、ここは変わるから気をつけて！
 
-# As with config/credentials.yml, you never want to store sensitive information,
-# like your database password, in your source code. If your source code is
-# ever seen by anyone, they now have access to your database.
-#
-# Instead, provide the password or a full connection URL as an environment
-# variable when you boot the app. For example:
-#
-#   DATABASE_URL="mysql2://myuser:mypass@localhost/somedatabase"
-#
-# If the connection URL is provided in the special DATABASE_URL environment
-# variable, Rails will automatically merge its configuration values on top of
-# the values provided in this file. Alternatively, you can specify a connection
-# URL environment variable explicitly:
-#
-#   production:
-#     url: <%= ENV["MY_APP_DATABASE_URL"] %>
-#
-# Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
-# for a full overview on how database connection configuration can be specified.
-#
+# プロダクション（本番）
 production:
   <<: *default
-  database: ajax_app_rails7_2_production
-  username: ajax_app_rails7_2
-  password: <%= ENV["AJAX_APP_RAILS7_2_DATABASE_PASSWORD"] %>
+  adapter: postgresql
+  url: <%= ENV['DATABASE_URL'] %>
+# 次はジェムファイルロックをターミナル上でする（bundle lock --add-platform x86_64-linux）
+# ギットハブからクローンんした場合、秘密情報管理用ファイルがないんため、
+# config/credentials.yml.encのファイルを削除すると必要なファイルが自動生成される（ EDITOR="vi" bin/rails credentials:edit）
